--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Test Layout Behaivor</string>
+    <string name="app_name">Test Drawing with RxJava 2</string>
 </resources>
